--- a/Minotaur/Areas/Customer/Views/Home/Index.cshtml
+++ b/Minotaur/Areas/Customer/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿<div class="pb-5 px-5">
     <div class="mt-0 pt-0 mb-2 pb-2 d-flex flex-column align-items-end">
-        <div id="productCards" class="row justify-content-end justify-content-center px-2">
+        <div id="productCards" class="row justify-content-end justify-content-center px-2 align-items-end">
+            Загрузка...
         </div>
     </div>
     <hr />
@@ -10,6 +11,7 @@
 @section Scripts{
     <script src="~/js/Customer/Home.js"></script>
 }
+
 
 
 
