--- a/Minotaur/Views/Shared/_FunctionsNavBar.cshtml
+++ b/Minotaur/Views/Shared/_FunctionsNavBar.cshtml
@@ -4,6 +4,8 @@
 @inject UserManager<MinotaurUser> UserManager
 
 
+    @*TODO:добавить новую роль в функция навбара*@
+
 @if (User.Identity?.IsAuthenticated == true)
 {
     if (User.IsInRole(Roles.Role_Admin))
@@ -17,7 +19,7 @@
                 <li><a class="nav-link text-light" asp-area="Admin" asp-controller="Category" asp-action="Index">Категории </a></li>
                 <li><a class="nav-link text-light" asp-area="Admin" asp-controller="Office" asp-action="Office">Офисы </a></li>
                 <li><a class="nav-link text-light" asp-area="Admin" asp-controller="Roles" asp-action="ViewRoles">Сотрудники </a></li>
-                <li><a class="nav-link text-light" asp-area="" asp-controller="" asp-action="">Модерация отзывов !!!! </a></li>
+                <li><a class="nav-link text-light" asp-area="Operator" asp-controller="Reviews" asp-action="Index">Отзывы на товары</a></li>
             </ul>
         </div>
 
