--- a/Minotaur/Areas/Customer/Views/Home/Details.cshtml
+++ b/Minotaur/Areas/Customer/Views/Home/Details.cshtml
@@ -67,21 +67,8 @@
                 </div>
             </div>
             <div class="col-5">
-                <div id="productRatingl">
-                    Рейтинг: @Model.ProductRating из 10
-                    <div>
-                        @for (int i = 0; i < 10; i++)
-                        {
-                            if (i < Model.ProductRating)
-                            {
-                                <i class="bi bi-star-fill"></i>
-                            }
-                            else
-                            {
-                                <i class="bi bi-star"></i>
-                            }
-                        }
-                    </div>
+                <div id="productRating">
+                   
                 </div>
                 <div>
                     @Html.Raw(Model.Description)
@@ -90,7 +77,7 @@
         </div>
     </div>
     <hr />
-    <div class="text-dark ">
+    <div class="text-dark fs-5 fw-bolder">
         Oтзывы
     </div>
     <hr />
